--- a/second.css
+++ b/second.css
@@ -1,7 +1,3 @@
- body {
-     font-family: 'Poppins', sans-serif;
- }
-
  /*  header part start  */
  .header {
      display: flex;
@@ -45,26 +41,17 @@
  }
 
  /* header part end */
-
- /* link & celebration part start */
- .link-celebration {
+ .section {
      display: flex;
-
      gap: 10px;
-     margin: 50px 50px;
+     justify-content: center;
+     align-items: center;
 
  }
 
-
-
- .celebrate {
-     display: grid;
-     grid-template-columns: repeat(3, 1fr);
-     column-gap: 10px;
- }
 
  /* link part start */
- .link-button {
+ .link-part {
      display: flex;
      flex-direction: column;
      gap: 10px;
@@ -72,71 +59,60 @@
      height: 145px;
      background-color: black;
      border-radius: 10px;
-     padding: 20px 20px;
+     padding: 20px 30px;
 
  }
 
- .link-button a {
+ .link-part a {
      text-decoration: none;
      color: black;
      font-size: 15px;
 
  }
 
- .blog {
+ .up {
      background-color: red;
  }
 
- .link-button button {
+ .link-part button {
      padding: 10px 0;
      border-radius: 7px;
      border: none;
  }
 
+ /* link part end */
 
- /* link part end  */
+ /* match day start */
+ .match-day {
+     display: grid;
+     grid-template-columns: repeat(3, 1fr);
+     gap: 10px;
 
 
-
-
- .celebrate img {
-     width: 100%;
  }
 
- .celebration {
-     width: 100%;
+ .count-flag {
      display: flex;
      flex-direction: column;
-     background-color: whitesmoke;
-
-     margin-bottom: 10px;
-     border-radius: 10px;
- }
-
- .icon {
-     display: flex;
-     gap: 20px;
-     padding-left: 5px;
-     color: black;
- }
-
- .view {
-
-     display: flex;
-     justify-content: center;
      align-items: center;
+     gap: 10px;
+     background-color: whitesmoke;
+     padding: 10px 0;
+     border-radius: 10px;
+     width: 80%;
+     padding: 30px 10px;
  }
 
- .view button {
-     background-color: red;
-     padding: 10px 20px;
-     border-radius: 7px;
-     color: white;
-     border: None;
-
+ .country {
+     display: flex;
+     gap: 10px;
  }
 
- /* link & celebration part end */
+ .country img {
+     width: 100%;
+ }
+
+ /* match day end */
 
  /* footer part start */
  .goal {
@@ -162,13 +138,13 @@
 
  }
 
- .link-part {
+ .link-part-last {
      display: flex;
      gap: 20px;
 
      justify-content: center;
      align-items: center;
-     font-size: 8px;
+     font-size: 10px;
      color: grey;
 
  }
