--- a/style.css
+++ b/style.css
@@ -87,6 +87,14 @@
      background-color: red;
  }
 
+ .blog:hover {
+     background-color: orange;
+     transform: translate(10px);
+     box-shadow: 3px 3px red;
+
+
+ }
+
  .link-button button {
      padding: 10px 0;
      border-radius: 7px;
